--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "theme-movistar",
+  "name": "theme-vivo",
   "version": "0.1.1",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "^2.2.0",
+    "grunt-bump": "^0.3.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-less": "~0.11.0",
+    "grunt-includes": "^0.4.5",
     "grunt-replace": "^0.8.0",
     "grunt-string-replace": "^1.0.0",
-    "jit-grunt": "~0.7.0",
-    "grunt-includes": "^0.4.5"
+    "jit-grunt": "~0.7.0"
   }
 }
